--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/text": "^3.3.0",
+    "@visx/wordcloud": "^3.3.0",
     "concurrently": "^8.2.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.3.1",
+    "react-highlight-words": "^0.20.0",
+    "recharts": "^2.12.0",
     "typescript": "^4.4.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "prepare": "husky install",
@@ -50,6 +57,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.185",
+    "@types/react-highlight-words": "^0.16.7",
     "autoprefixer": "^10.4.12",
     "husky": "^8.0.1",
     "nodemon": "^2.0.20",
