--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "start:app": "react-scripts start",
     "start": "concurrently 'npm run start:py' 'npm run start:app'",
     "build": "npm run build:py && npm run build:app && npm run build:css",
-    "archive": "cd build && zip -r ../release.zip .",
+    "archive": "cd build && rm -f release.zip && zip -r ../release.zip .",
     "release": "npm run build && npm run archive",
     "test": "react-scripts test",
     "lint": "npm run fix:ts"
