--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,20 +11,21 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_BUILD: standalone
+      NODE_ENV: development
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - uses: earthly/actions-setup@v1
-        with:
-          version: v0.7.8
+      - name: Install dependencies
+        run: npm i && pip3 install poetry
 
       - name: Build release
-        run: earthly +release --build_type=standalone
+        run: npm run release
 
       - name: Unpack release
-        run: unzip release.zip -d build
+        run: unzip -o release.zip -d build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
